--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -6,3 +6,9 @@ host     all         pgx_pw          127.0.0.1/32      password
 hostssl  all         pgx_ssl         127.0.0.1/32      md5
 host     replication pgx_replication 127.0.0.1/32      md5
 host     pgx_test    pgx_replication 127.0.0.1/32      md5
+
+host     all         pgx_md5         ::1/128           md5
+host     all         pgx_pw          ::1/128           password
+hostssl  all         pgx_ssl         ::1/128           md5
+host     replication pgx_replication ::1/128           md5
+host     pgx_test    pgx_replication ::1/128           md5
